# FHT

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  FHT.pro  FHT.sln  README.md  README.rst  WORKSPACE  build.bat  build.py  requirements.txt
FHT/: FHT.vcxproj  FHT.vcxproj.filters  Hendler.cpp  Hendler.h  Task.cpp  Task.h  TestFHT.cpp  controller.h  iHendler.h  iTask.h  icontroller.h
cmake/: boost.cmake  example.cmake  fht.cmake
docs/: build.rst  conf.py  index.rst
example/TestPostgresConnect/: TestPostgresConnect.cpp  configSQL.json
example/TestTaskHendler/: TestTaskHendler.cpp
example/TestWebClient/: TestWebClient.cpp
example/TestWebServer/: TestWebServer.cpp  config.json
example/TestWebServer/Test/: Test.cpp  Test.h
include/FHT/: CoreFHT.h
include/FHT/Common/Controller/: Controller.h
include/FHT/Common/Controller/Client/: Client.h  WebClient.h
include/FHT/Common/Controller/Hendler/: Hendler.h
include/FHT/Common/Controller/Logger/: Logger.h
include/FHT/Common/Controller/Server/: Server.h
include/FHT/Common/Controller/Task/: Task.h
include/FHT/Common/DBFacade/: DBFacade.h
include/FHT/Common/DBFacade/Postgresql/: Postgresql.h
include/FHT/Common/DBFacade/SQLite/: SQLite.h
include/FHT/Config/: Config.h
include/FHT/Interface/Common/: iClient.h  iHendler.h  iLogger.h  iServer.h  iTask.h
include/FHT/Interface/DBFacade/: iDBFacade.h  postgresConfiguration.h  sqliteConfiguration.h
src/FHT/Common/Controller/: Controller.h
src/FHT/Common/Controller/Client/: Client.cpp  Client.h  WebClient.cpp  WebClient.h  WebClientAsync.cpp  WebClientCoro.cpp
src/FHT/Common/Controller/DBFacade/: DBFacade.cpp  DBFacade.h
src/FHT/Common/Controller/DBFacade/Postgresql/: PostgresConnection.h  Postgresql.cpp  Postgresql.h
src/FHT/Common/Controller/Hendler/: Hendler.cpp  Hendler.h
src/FHT/Common/Controller/Logger/: Logger.cpp  Logger.h
src/FHT/Common/Controller/Server/: InitialSer.cpp  InitialSer.h  Server.cpp  Server.h  ServerAsync.cpp  ServerCoro.cpp
src/FHT/Common/Controller/Server/WebSocket/: Connection.cpp  Connection.h  Frame.cpp  Frame.h  Tools.h  User.cpp  User.h  WebSocket.cpp  WebSocket.h
src/FHT/Common/Controller/Task/: Task.cpp  Task.h
src/FHT/Common/DBFacade/: DBFacade.cpp  DBFacade.h
src/FHT/Common/DBFacade/Postgresql/: PostgresConnection.cpp  Postgresql.cpp
src/FHT/Common/DBFacade/SQLite/: SQLite.cpp  sqliteConnection.cpp
src/FHT/Common/Log/: LoggerStream.h
src/FHT/Common/Server/: InitialSer.cpp  InitialSer.h  Server.cpp  Server.h
src/FHT/Config/: Config.cpp
src/FHT/Interface/: iClient.h  iController.h  iDBFacade.h  iHendler.h  iServer.h  iTask.h
src/FHT/Interface/Common/: iClient.h  iDBFacade.h  iHendler.h  iLogger.h  iTask.h
src/FHT/Interfice/: iClient.h  iController.h  iHendler.h  iServer.h  iTask.h
src/FHT/lib/: HostCheckCurl.cpp  LoggerStream.h  Template.h  base64.cpp
src/FHT/lib/websocket/: connection.cpp  connection.h  frame.cpp  tools.h  user.cpp  user.h  websocket.cpp  websocket.h
src/Sample/TestPostgresConnect/: TestPostgresConnect.cpp  config.json
src/Sample/TestPostgresConnect/Config/: Config.cpp  Config.h
src/Sample/TestService/: TestService.cpp
src/Sample/TestService/Test/: Test.cpp
src/Sample/TestTaskHendler/: TestTaskHendler.cpp
src/TemplatesFHT/TestFHT/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
src/TemplatesFHT/TestFHT/src/: TestFHT.cc
src/TemplatesFHT/TestServiceFHT/: .gitignore  CMakeLists.txt  README.md
src/TemplatesFHT/TestServiceFHT/src/: TestServiceFHT.cc  config.json  iTest.h
src/TemplatesFHT/TestServiceFHT/src/Test/: Test.cpp  Test.h
submodule/: boost.cmake
